# Db2Assess

./: .gitignore
DataMigration/: .coverage  big5_test.txt  main.py  pyproject.toml
DataMigration/.junie/: guidelines.md
DataMigration/tests/: test_migration.py
spring-db2-jdbc/: pom.xml
spring-db2-jdbc/.junie/: guidelines.md
spring-db2-jdbc/src/main/java/org/hle/springdb2jdbc/: SpringDb2JdbcApplication.java
spring-db2-jdbc/src/main/java/org/hle/springdb2jdbc/config/: EncodingConfigProp.java
spring-db2-jdbc/src/main/java/org/hle/springdb2jdbc/controller/: GirlController.java
spring-db2-jdbc/src/main/java/org/hle/springdb2jdbc/dto/: GirlDto.java
spring-db2-jdbc/src/main/java/org/hle/springdb2jdbc/model/: DbCompatibleString.java  RestoreFromDbCompatible.java
spring-db2-jdbc/src/main/java/org/hle/springdb2jdbc/repository/: GirlRepository.java
spring-db2-jdbc/src/main/java/org/hle/springdb2jdbc/service/: ManualEncodingService.java
spring-db2-jdbc/src/main/resources/: application.properties
spring-db2-jdbc/src/test/java/org/hle/springdb2jdbc/controller/: GirlControllerTest.java
spring-db2-jdbc/src/test/java/org/hle/springdb2jdbc/repository/: GirlRepositoryImplTest.java  GirlRepositoryImplUtf8Test.java
spring-db2-jdbc/src/test/resources/: application-utf8.properties  application.properties  mm_init.sql
spring-oracle-jdbc/: pom.xml
spring-oracle-jdbc/src/main/java/org/hle/springoraclejdbc/: SpringOracleJdbcApplication.java
spring-oracle-jdbc/src/main/resources/: application.properties
spring-oracle-jdbc/src/test/resources/: cim_init.sql
(+14 files in other folders)
